# rustproof

./: .travis.yml  CONTRIBUTE.md  COPYRIGHT  Cargo.toml  Cargo.toml~  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  appveyor.yml  index.html  out.txt  search-index.js  z3.txt
documents/: ProjectPlan.md
examples/: README.md  bajr.rs  mobrien.rs  mslocum.rs  salterm.rs  ssahli.rs  temp.rs  test_conditions.rs  test_fail_invalid.rs  test_fail_valid.rs  testing_conditions.rs  vintle.rs  vschuster.rs  wp_example.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/rustproof/smt_output/: trait.Pred2SMT.js
libsmt/: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
libsmt/examples/: bajr.rs  bitvec_x86_64.rs  fiestel.rs  simple_example.rs
libsmt/src/: lib.rs
libsmt/src/backends/: backend.rs  smtlib2.rs  z3.rs
libsmt/src/logics/: lia.rs  qf_abv.rs  qf_aufbv.rs  qf_bv.rs  utils.rs
libsmt/src/theories/: array_ex.rs  bitvec.rs  core.rs  integer.rs  real.rs  real_ints.rs  utils.rs
rustproof/: fn.registrar.html  index.html  sidebar-items.js  struct.MirData.html  struct.MirVisitor.html
rustproof/expression/: enum.BinaryOperator.html  enum.Expression.html  enum.Types.html  enum.UnaryOperator.html  fn.determine_evaluation_type.html  fn.is_signed_type.html  fn.is_unsigned_type.html  fn.is_valid_signed.html  fn.is_valid_unsigned.html  fn.string_to_type.html  fn.substitute_variable_with_expression.html  fn.ty_check.html  index.html  sidebar-items.js  struct.BinaryExpressionData.html  struct.SignedBitVectorData.html  struct.UnaryExpressionData.html  struct.UnsignedBitVectorData.html  struct.VariableMappingData.html
rustproof/parser/: fn.parse_attribute.html  fn.parse_condition.html  index.html  sidebar-items.js
rustproof/parser/expression_parser/: fn.__action0.html  fn.__action1.html  fn.__action10.html  fn.__action11.html  fn.__action12.html  (+90 more)
rustproof/reporting/: index.html
rustproof/smt_output/: fn.gen_smtlib.html  index.html  sidebar-items.js  trait.Pred2SMT.html
rustproof/weakest_precondition/: fn.add_zero_check.html  fn.gen.html  fn.gen_expression.html  fn.gen_lvalue.html  fn.gen_stmt.html  fn.gen_ty.html  index.html  sidebar-items.js
scripts/: travis-z3.sh
src/: data.rs  dev_tools.rs  lib.rs
src/control/: mod.rs
src/expression/: mod.rs
src/mir_dump/: Cargo.toml
src/mir_dump2/: Cargo.toml
src/parser/: expression_parser.lalrpop  expression_parser.rs  full_lalrpop.rs  lalrpop.lalrpop  lalrpop.rs  mod.rs  predicate_parser.lalrpop  predicate_parser.rs
src/reporting/: mod - Copy.rs  mod.rs  mod.rs~
src/smt-output/: mod.rs
src/smt_output/: mod.rs  overflow.smt
src/tests/: mod.rs  system_tests.rs  test_control.rs  test_expression.rs  test_parser.rs  test_reporting.rs  test_weakest_precondition.rs  test_z3_interface.rs
src/weakest_precondition/: mod.rs  overflow.rs
src/z3_interface/: mod.rs
tests/: compile-test.rs  test_assert.rs  test_boolean_arithmetic.rs  test_conditionals.rs  test_conditions.rs  test_fail_invalid.rs  test_fail_valid.rs  test_signed.rs  test_unsigned.rs
tests/run-pass/: int_add.rs
(+219 files in other folders)
