[package]
name = "rustproof"
version = "0.0.1"
authors = [
            "Matthew Slocum <arco000@gmail.com>",
            "Sami Sahli <samisahli@me.com>",
            "Vincent Schuster <vincent_schuster@outlook.com>",
            "Matthew O'Brien <matthewo@pdx.edu>",
            "Michael Salter <salterm@pdx.edu>",
            "Bradley Rasmussen <rasmbj@pdx.edu>",
            "Drew Gohman <dgohman@pdx.edu>"
          ]

#build = "build.rs"

[build-dependencies]
lalrpop = "0.11.0"

[dependencies]
env_logger = "0.3.4"
lalrpop-util = "0.11.0"
libsmt = { git = "https://github.com/Rust-Proof/libsmt.rs.git" }
log = "0.3.6"
petgraph = "*"
term = "0.4.4"

[lib]
name = "rustproof"
path = "src/lib.rs"
plugin = true
